# tvm2onnx

./: .devcontainer.json  .dockerignore  .flake8  .gitignore  .gitmodules  .mypy.ini  CODEOWNERS  Dockerfile  Makefile  README.md  model.onnx  pyproject.toml
.github/workflows/: ci.yml
models/: README.md
scripts/: __init__.py  at2.py  autotvm_model.py  build_ort.sh  onnx_benchmark.py  onnx_package.py  test.py  tune_model.py
scripts/utils/: relay_model.py  setup_logging.py  testing_utils.py
tests/: README.md  benchmark.py  conftest.py  export_virtual_machine.py  run_inference_in_subprocess.py  run_virtual_machine.py  test_acc.py  test_metadata.py  test_models.py  test_onnx.py  test_onnx_runtime_tvm_package.py  test_onnx_runtime_tvm_package_with_subprocess.py  test_perf.py  test_pure_tvm.py  test_scripts.py  test_utils.py
tests/testdata/: abtest.onnx  big_model.onnx  cast_float16_to_float32.onnx  cast_float32_to_float16.onnx
tutorial/: README.md  basic_tune_model.py  run_inference.py
tvm2onnx/: README.md  __init__.py  error.py  inputs.py  model_base.py  onnx_model.py  onnx_runtime_tvm_package.py  onnx_utils.py  package_utils.py  relay_model.py  relay_model_runtime.py  relay_serializer.py  shapes.py  tuning_records.py  tvm_constants.py  utils.py
tvm2onnx/templates/onnx_custom_op/{{ cookiecutter.op_name }}/: CMakeLists.txt  Makefile  custom_op_library.cc  custom_op_library.def  custom_op_library.h
