# Copyright 2023 OctoML
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[tool.poetry]
name = "tvm2onnx"
version = "0.1.0"
description = "Tune and convert TVM models to ONNX"
authors = ["Robert Kimball <bobkimball@gmail.com>"]
packages = [
    { include = "tvm2onnx" } 
]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
onnx = "^1.10"
cookiecutter = "^1.7.2"


[tool.poetry.dev-dependencies]
# TVM Dependencies
numpy = "1.21.6"
psutil = "5.7.2"
tornado = "6.0.4"
xgboost = "1.5.2"
decorator = "4.4.2"
cloudpickle = "^1.6.0"
packaging = "20.9"
six = "1.16.0"
attrs = "21.2.0"
orderedset = "2.0.3"
typed-ast = "1.4.3"
requests = "2.27.1"
Pillow = "^8.4.0"
Cython = "0.29.23"
synr = "0.6.0"
scipy = "^1.4.1"

# Scripts
onnxruntime = "1.12.1"
structlog = "^21.2.0"

# Test/Lint
pytest = "^6.1.2"
pytest-cov = "^3.0.0"
pytest-mock = "^3.1.0"
pytest-faker = "^2.0.0"
pytest-testmon = "^1.0.3"
pytest-test-groups = "^1.0.3"
pytest-xdist = "^2.4.0"
pytest-virtualenv = "^1.7.0"
black = "22.3.0"
isort = "^5.8.0"
mypy = "^0.971"
flake8 = "^3.9.2"
ffi-navigator = "^0.5.2"
typing-extensions = "*"
types-decorator = "5.1.8"
parse = "*"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]
addopts = ["--no-cov-on-fail"]
markers= [
    "cuda: mark a test as cuda only (deselect with '-m \"not cuda\"')",
    "slow: mark a test as slow (run all slow tests with --runslow)"
]

[build-system]
requires = ["poetry>=1.0.10"]
build-backend = "poetry.masonry.api"
